php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #40076 zend_alloc.c: Value of enumeration constant must be in range of signed integer.
Submitted: 2007-01-09 15:02 UTC Modified: 2007-01-09 15:31 UTC
From: ionut dot aivanesei at amdocs dot com Assigned: dmitry (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.2.0 OS: AIX
Private report: No CVE-ID: None
 [2007-01-09 15:02 UTC] ionut dot aivanesei at amdocs dot com
Description:
------------
Hi,

When I compile PHP 5.2.0 on AIX I get this:

"./php-5.2.0/Zend/zend_alloc.c", line 268.28: 1506-243 (S) Value of enumeration constant must be in range of signed integer.
"./php-5.2.0/Zend/zend_alloc.c", line 269.28: 1506-243 (S) Value of enumeration constant must be in range of signed integer.
make: *** [Zend/zend_alloc.lo] Error 1

On the same server PHP 5.1.4 compiled succesfully.


Reproduce code:
---------------
./configure --prefix=...
make
make install

Expected result:
----------------
everything should be OK

Actual result:
--------------
...
"./php-5.2.0/Zend/zend_alloc.c", line 268.28: 1506-243 (S) Value of enumeration constant must be in range of signed integer.
"./php-5.2.0/Zend/zend_alloc.c", line 269.28: 1506-243 (S) Value of enumeration constant must be in range of signed integer.
make: *** [Zend/zend_alloc.lo] Error 1


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-01-09 15:30 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2.
 [2007-01-09 15:31 UTC] ionut dot aivanesei at amdocs dot com
Hi,

Can you send me a fix? I would like to finish my install :)

Thanks,
Ionutz
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 09:00:02 2026 UTC