Fixed bug #40076 (zend_alloc.c: Value of enumeration constant must be in range of signed integer)